GNOME Bugzilla – Bug 775294
GTK_IS_WIDGET (widget) assertion failures when selecting "Radio France" source
Last modified: 2016-12-11 05:29:09 UTC
(lt-rhythmbox:6051): Gtk-CRITICAL **: gtk_widget_get_toplevel: assertion 'GTK_IS_WIDGET (widget)' failed (lt-rhythmbox:6051): Gtk-CRITICAL **: gtk_widget_is_toplevel: assertion 'GTK_IS_WIDGET (widget)' failed
Created attachment 340955 [details] [review] grilo: set mnemonic only if the grilo source supports searching
Review of attachment 340955 [details] [review]: pushed as commit c6de62b