grilo: set mnemonic only if the grilo source supports searching

https://bugzilla.gnome.org/show_bug.cgi?id=775294